Tests are required to carry project names
Affects: https://github.com/io7m/ervilla/issues/1